refactor: update tests to use instancio